kubernetes/infrastructure/newt/templates/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "egress"
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/component": newt
  egress:
  - toCIDR:
        - 127.0.0.1/32

  - toEndpoints:
    - matchLabels:
       "k8s:io.kubernetes.pod.namespace": kube-system
       "k8s:k8s-app": kube-dns
    toPorts:
      - ports:
         - port: "53"
           protocol: ANY
        rules:
          dns:
            - matchPattern: "*"

  - toFQDNs:
      - matchName: "pangolin.ext.paulfriedrich.me"

  - toServices:
    - k8sService:
        serviceName: continuwuity
        namespace: continuwuity
    - k8sService:
        serviceName: livekit-server
        namespace: livekit
    - k8sService:
        serviceName: lk-react
        namespace: livekit

  - toCIDR:
        - 172.16.61.5/32
    toPorts:
      - ports:
         - port: "3478"
           protocol: ANY

  - toEndpoints:
    - matchLabels:
       "k8s:io.kubernetes.pod.namespace": livekit
       "app": stunner
